# nCine

./: .clang-format  .gitignore  .hgignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  FindGLFW.cmake  FindVorbis.cmake  Info.plist.in  LICENSE  README.md  WindowsHiDPI.manifest  azure-pipelines.yml  config.h.in  emscripten_shell.html.in  imconfig.h  io.github.ncine.desktop  io.github.ncine.desktop.in  ncine_config.h.in  test.cpp
android/: AndroidManifest.xml  build.gradle  build.gradle.in  gradle-devdist.properties  gradle.properties  gradle.properties.in  settings.gradle
android/src/main/cpp/: CMakeLists-devdist.txt  CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  gbench_array.cpp  gbench_array_allocators.cpp  gbench_bigarray.cpp  gbench_bighashmap.cpp  gbench_bighashmaplist.cpp  gbench_bighashset.cpp  gbench_biglist.cpp  gbench_copy_int.cpp  gbench_copy_movable.cpp  gbench_copy_trivial.cpp  gbench_fixed_allocations.cpp  gbench_hash_functions.cpp  gbench_hashmap.cpp  gbench_hashmaplist.cpp  gbench_hashset.cpp  gbench_hashsetlist.cpp  gbench_list.cpp  gbench_matrix4x4f.cpp  gbench_random.cpp  gbench_random_allocations.cpp  gbench_sparseset.cpp  gbench_staticarray.cpp  gbench_statichashmap.cpp  gbench_statichashset.cpp  gbench_staticstring.cpp  gbench_std_array.cpp  gbench_std_biglist.cpp  gbench_std_bigunorderedmap.cpp  gbench_std_bigvector.cpp  gbench_std_list.cpp  gbench_std_rand.cpp  gbench_std_string.cpp  gbench_std_unorderedmap.cpp  gbench_std_unorderedset.cpp  gbench_std_vector.cpp  gbench_string.cpp  test_movable.h
cmake/: FindCrashpad.cmake  FindOpenGLES2.cmake  FindSDL2.cmake  FindVorbis.cmake  FindWebP.cmake  FindnCine.cmake  check_atomic.cmake  nCineConfig.cmake.in  ncine_build_android.cmake  ncine_build_benchmarks.cmake  ncine_build_documentation.cmake  ncine_build_tests.cmake  ncine_build_unit_tests.cmake  ncine_compile_shaders.cmake  ncine_compiler_options.cmake  ncine_devdist_tests.cmake  ncine_extra_sources.cmake  ncine_extract_symbols.cmake  ncine_gbenchmark_download.in  ncine_generated_sources.cmake  ncine_get_version.cmake  ncine_gtest_download.in  ncine_headers.cmake  ncine_imgui.cmake  ncine_imgui_download.in  ncine_imported_targets.cmake  ncine_installation.cmake  ncine_nuklear.cmake  ncine_nuklear_download.in  ncine_options.cmake  ncine_options_presets.cmake  ncine_private_headers.cmake  ncine_sources.cmake  ncine_strip_binaries.cmake  ncine_tracy.cmake  ncine_tracy_download.in  spirv_embed.cmake
include/: AndroidApplication.h  AndroidInputManager.h  AndroidJniHelper.h  AndroidKeys.h  AnimatedSprite.h  AppConfiguration.h  Application.h  Array.h  ArrayIndexer.h  ArrayIterator.h  AssetFile.h  AudioBuffer.h  AudioBufferPlayer.h  AudioStream.h  AudioStreamPlayer.h  BaseSprite.h  Color.h  Colorf.h  DisplayMode.h  DrawableNode.h  Font.h  GfxCapabilities.h  GlfwKeys.h  HashFunctions.h  HashMap.h  HashMapIterator.h  IAppEventHandler.h  IAudioDevice.h  IAudioLoader.h  IAudioPlayer.h  IFile.h  IGfxCapabilities.h  IGfxDevice.h  IIndexer.h  IInputEventHandler.h  IInputManager.h  ILogger.h  ITextureLoader.h  IThreadCommand.h  IThreadPool.h  (+140 more)
project/: CMakePresets.json  Info.plist.in  emscripten_shell.html.in  project.desktop
project/android/app/src/main/cpp/: CMakeLists.txt  jnicall_functions.cpp.in
scripts/: export_lua_api.lua  export_lua_api_list.lua  init.lua  ncine_footer.lua  ncine_header.lua  reload.lua  script.lua  test_color.lua  test_vec2.lua  test_vec3.lua  test_vec4.lua
src/: AndroidJniHelper.cpp  AppConfiguration.cpp  Application.cpp  ArrayIndexer.cpp  AssetFile.cpp  Crashpad.cpp  EmscriptenLocalFile.cpp  FileLogger.cpp  FileLogger.h  FileLoggerWindows.cpp  FileSystem.cpp  FntParser.cpp  Font.cpp  FontGlyph.cpp  FrameTimer.cpp  FrameTimer.h  GlfwInputManager.cpp  GlfwKeys.cpp  IFile.cpp  IInputManager.cpp  ILogger.h  JoyMapping.cpp  JoyMappingDb.h  MemoryFile.cpp  NuklearContext.cpp  PCApplication.cpp  ProfileVariable.cpp  Qt5Widget.cpp  SdlInputManager.cpp  SdlKeys.cpp  ServiceLocator.cpp  ServiceLocator.h  (+24 more)
src/tests/: CMakeLists.txt  apptest_threadpool.cpp  apptest_threadpool.h  apptest_threads.cpp  apptest_threads.h  glapptest_fbo_cube.cpp  glapptest_fbo_cube.h  grlapptest.cpp  grlapptest.h  sdltest_audio.cpp  sdltest_font.cpp  sdltest_particles.cpp  sdltest_renderqueue.cpp  sdltest_scene.cpp  test_radixsort.cpp
tests/: CMakeLists.txt  Statistics.cpp  Statistics.h  apptest_allocators.cpp  apptest_allocators.h  apptest_anchor.cpp  apptest_anchor.h  apptest_animsprites.cpp  apptest_animsprites.h  apptest_audio.cpp  apptest_audio.h  apptest_bunnymark.cpp  apptest_bunnymark.h  apptest_camera.cpp  apptest_camera.h  apptest_clones.cpp  apptest_clones.h  apptest_crash.cpp  apptest_crash.h  apptest_datapath.h  apptest_filebrowser.cpp  apptest_filebrowser.h  apptest_font.cpp  apptest_font.h  apptest_gui.cpp  apptest_gui.h  apptest_jobsystem.cpp  apptest_jobsystem.h  apptest_joymapping.h  apptest_joystick.cpp  apptest_joystick.h  apptest_loading.cpp  apptest_loading.h  apptest_lua.cpp  apptest_lua.h  apptest_luareload.cpp  apptest_luareload.h  apptest_meshdeform.cpp  apptest_meshdeform.h  apptest_meshsprites.cpp  (+60 more)
unit_tests/: CMakeLists.txt  gtest_allocator_containers.cpp  gtest_allocator_freelist.cpp  gtest_allocator_linear.cpp  gtest_allocator_malloc.cpp  gtest_allocator_pool.cpp  gtest_allocator_stack.cpp  gtest_allocators.h  gtest_array.cpp  gtest_array.h  gtest_array_algorithms.cpp  gtest_array_iterator.cpp  gtest_array_movable.cpp  gtest_array_object_policy_tag.cpp  gtest_array_operations.cpp  gtest_array_operations_nontrivial.cpp  gtest_array_refcounted.cpp  gtest_array_reverseiterator.cpp  gtest_array_sort.cpp  gtest_array_zerocapacity.cpp  gtest_atomic.cpp  gtest_atomic.h  gtest_atomic32.cpp  gtest_atomic64.cpp  gtest_bitset.cpp  gtest_bitset.h  gtest_carray.h  gtest_carray_algorithms.cpp  gtest_carray_iterator.cpp  gtest_carray_sort.cpp  gtest_color.cpp  gtest_color.h  gtest_colorf.cpp  gtest_colorhdr.cpp  gtest_filesystem.cpp  gtest_filesystem.h  gtest_hash_functions.cpp  gtest_hash_functions.h  gtest_hashmap.cpp  gtest_hashmap.h  (+134 more)
(+782 files in other folders)
